@@ -8,6 +8,7 @@ Changes in 3.4.0
   - GeometryPrecisionReducer class
   - BufferInputLineSimplifier header exposed (#548)
   - New Centroid class supporting mixed geometry components (#612)
+  - io::Writer::reserve() method
 - C++ API changes:
   - New noding::GeometryNoder class
   - Added BufferOp::setSingleSided 
